Wallet/OnlineWallet.Web.QueryLanguage/Parser/FilterParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.4
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from FilterParser.g4 by ANTLR 4.6.4

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace OnlineWallet.Web.QueryLanguage.Parser {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.4")]
[System.CLSCompliant(false)]
public partial class FilterParser : Parser {
	public const int
		AND=1, OR=2, WORD=3, WHITESPACE=4;
	public const int
		RULE_filter = 0, RULE_primary = 1, RULE_andTerm = 2, RULE_orTerm = 3, 
		RULE_searchTerm = 4;
	public static readonly string[] ruleNames = {
		"filter", "primary", "andTerm", "orTerm", "searchTerm"
	};

	private static readonly string[] _LiteralNames = {
	};
	private static readonly string[] _SymbolicNames = {
		null, "AND", "OR", "WORD", "WHITESPACE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "FilterParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public FilterParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class FilterContext : ParserRuleContext {
		public PrimaryContext primary() {
			return GetRuleContext<PrimaryContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(FilterParser.Eof, 0); }
		public FilterContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_filter; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFilterParserListener typedListener = listener as IFilterParserListener;
			if (typedListener != null) typedListener.EnterFilter(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFilterParserListener typedListener = listener as IFilterParserListener;
			if (typedListener != null) typedListener.ExitFilter(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFilterParserVisitor<TResult> typedVisitor = visitor as IFilterParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFilter(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FilterContext filter() {
		FilterContext _localctx = new FilterContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_filter);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 10; primary();
			State = 11; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PrimaryContext : ParserRuleContext {
		public AndTermContext[] andTerm() {
			return GetRuleContexts<AndTermContext>();
		}
		public AndTermContext andTerm(int i) {
			return GetRuleContext<AndTermContext>(i);
		}
		public PrimaryContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_primary; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFilterParserListener typedListener = listener as IFilterParserListener;
			if (typedListener != null) typedListener.EnterPrimary(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFilterParserListener typedListener = listener as IFilterParserListener;
			if (typedListener != null) typedListener.ExitPrimary(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFilterParserVisitor<TResult> typedVisitor = visitor as IFilterParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrimary(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PrimaryContext primary() {
		PrimaryContext _localctx = new PrimaryContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_primary);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 14;
			_errHandler.Sync(this);
			_la = _input.La(1);
			do {
				{
				{
				State = 13; andTerm();
				}
				}
				State = 16;
				_errHandler.Sync(this);
				_la = _input.La(1);
			} while ( _la==WORD );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AndTermContext : ParserRuleContext {
		public OrTermContext[] orTerm() {
			return GetRuleContexts<OrTermContext>();
		}
		public OrTermContext orTerm(int i) {
			return GetRuleContext<OrTermContext>(i);
		}
		public ITerminalNode[] AND() { return GetTokens(FilterParser.AND); }
		public ITerminalNode AND(int i) {
			return GetToken(FilterParser.AND, i);
		}
		public AndTermContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_andTerm; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFilterParserListener typedListener = listener as IFilterParserListener;
			if (typedListener != null) typedListener.EnterAndTerm(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFilterParserListener typedListener = listener as IFilterParserListener;
			if (typedListener != null) typedListener.ExitAndTerm(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFilterParserVisitor<TResult> typedVisitor = visitor as IFilterParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAndTerm(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AndTermContext andTerm() {
		AndTermContext _localctx = new AndTermContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_andTerm);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 18; orTerm();
			State = 23;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==AND) {
				{
				{
				State = 19; Match(AND);
				State = 20; orTerm();
				}
				}
				State = 25;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OrTermContext : ParserRuleContext {
		public SearchTermContext[] searchTerm() {
			return GetRuleContexts<SearchTermContext>();
		}
		public SearchTermContext searchTerm(int i) {
			return GetRuleContext<SearchTermContext>(i);
		}
		public ITerminalNode[] OR() { return GetTokens(FilterParser.OR); }
		public ITerminalNode OR(int i) {
			return GetToken(FilterParser.OR, i);
		}
		public OrTermContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_orTerm; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFilterParserListener typedListener = listener as IFilterParserListener;
			if (typedListener != null) typedListener.EnterOrTerm(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFilterParserListener typedListener = listener as IFilterParserListener;
			if (typedListener != null) typedListener.ExitOrTerm(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFilterParserVisitor<TResult> typedVisitor = visitor as IFilterParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOrTerm(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OrTermContext orTerm() {
		OrTermContext _localctx = new OrTermContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_orTerm);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 26; searchTerm();
			State = 31;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==OR) {
				{
				{
				State = 27; Match(OR);
				State = 28; searchTerm();
				}
				}
				State = 33;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SearchTermContext : ParserRuleContext {
		public ITerminalNode WORD() { return GetToken(FilterParser.WORD, 0); }
		public SearchTermContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_searchTerm; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFilterParserListener typedListener = listener as IFilterParserListener;
			if (typedListener != null) typedListener.EnterSearchTerm(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFilterParserListener typedListener = listener as IFilterParserListener;
			if (typedListener != null) typedListener.ExitSearchTerm(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFilterParserVisitor<TResult> typedVisitor = visitor as IFilterParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSearchTerm(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SearchTermContext searchTerm() {
		SearchTermContext _localctx = new SearchTermContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_searchTerm);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 34; Match(WORD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN.ToCharArray());
}
} // namespace OnlineWallet.Web.QueryLanguage.Parser
